Upgrade junit version, apply small changes